# dumpster

./: .dockerignore  .env.example  .gitignore  Cargo.toml  INSTALL.md  README.md  SESSION_SUMMARY.md  clippy.toml  config.toml.example  docker-compose.yml  package-lock.json  package.json  webpack.config.js
deploy/: README.md
docs/: THEMING.md  communication.md  configuration.md  features.md  moderation.md  performance.md  security.md
examples/: hash_password.rs
migrations/: 20251025000433_email_tokens.down.sql  20251025000433_email_tokens.up.sql  20251025004315_account_lockout.down.sql  20251025004315_account_lockout.up.sql  20251025045648_full_text_search.down.sql  20251025045648_full_text_search.up.sql  20251025050231_moderation_tools.down.sql  20251025050231_moderation_tools.up.sql  20251025051358_seed_permissions.down.sql  20251025051358_seed_permissions.up.sql  20251109000000_notifications.down.sql  20251109000000_notifications.up.sql  20251109010000_private_messaging.down.sql  20251109010000_private_messaging.up.sql  20251109020000_user_posts_per_page.down.sql  20251109020000_user_posts_per_page.up.sql  20251123000000_user_theme_preference.down.sql  20251123000000_user_theme_preference.up.sql  20251123000001_forum_rules.down.sql  20251123000001_forum_rules.up.sql  20251123000002_thread_prefixes.down.sql  20251123000002_thread_prefixes.up.sql  20251123000003_user_profile_fields.down.sql  20251123000003_user_profile_fields.up.sql  20251222000000_reactions.down.sql  20251222000000_reactions.up.sql  20251223000000_reports.down.sql  20251223000000_reports.up.sql  20251224051538_thread_email_subscription.down.sql  20251224051538_thread_email_subscription.up.sql  20251225052614_custom_title.down.sql  20251225052614_custom_title.up.sql  20251225065617_thread_polls.down.sql  20251225065617_thread_polls.up.sql  20251225171257_thread_tags.down.sql  20251225171257_thread_tags.up.sql  20251225183835_forum_moderators.down.sql  20251225183835_forum_moderators.up.sql  20251225192339_unfurl_cache.down.sql  20251225192339_unfurl_cache.up.sql  (+98 more)
src/: app_config.rs  auth_2fa.rs  badges.rs  cache.rs  captcha.rs  config.rs  constants.rs  create_user.rs  filesystem.rs  group.rs  ip.rs  lib.rs  rate_limit.rs  session.rs  spam.rs  template.rs  theme.rs  ugc.rs  user.rs  word_filter.rs
templates/: account.html  activity_feed.html  chat.html  create_user.html  email_verification.html  email_verification_resend.html  forum.html  forum_new_thread.html  forums.html  index.html  login.html  login_2fa.html  member.html  member_followers.html  notification_preferences.html  notifications.html  password_reset_confirm.html  password_reset_request.html  (+8 more)
(+253 files in other folders)
