[package]
edition = "2021"
name = "dumpster"
version = "0.1.0"

[dependencies]
actix = "0.13"
actix-files = "0.6"
actix-multipart = "0.6"
actix-session = { version = "0.9", features = ["cookie-session"] }
actix-utils = "3"
actix-web = "4.5"
actix-web-actors = "4.3"
anyhow = "^1"
arc-swap = "1.6"
argon2 = "0.4.1"
askama = { version = "^0.11", default-features = false, features = [
    "with-actix-web",
    "mime",
    "mime_guess",
] }
askama_actix = "^0.13"
async-trait = "^0.1" # dyn ChatLayer async support
bitflags = "^1"
blake3 = "1.3.0"
chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
dashmap = "5.3.3"
derive_more = "^0"
dissimilar = "^1"
dotenv = "0.15.0"
env_logger = "0.9.0"
ffmpeg-next = "8.0"
futures = { version = "0.3.19", default-features = false }
futures-util = { version = "0.3.19", default-features = false }
google-authenticator = { version = "0.3.0", features = ["with-qrcode"] }
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "pool",
    "hostname",
    "builder",
] }
linkify = "^0.9" # BbCode parser
log = "0.4.14"
mime = "0.3.16"
nom = "^7" # BbCode parser 
once_cell = "1.9.0"
phf = { version = "^0.11", features = ["macros"] }
rand = "0.8.4"
rctree = "0.4.0" # BbCode lexer
redis = { version = "^0.21", features = [
    "tokio-comp",
    "tokio-native-tls-comp",
] } # XF Session compat   
regex = "1.5" # XF Session parser
rss = "2.0" # RSS feed generation
atom_syndication = "0.12" # Atom feed generation
rusoto_core = "^0.48"
rusoto_s3 = "^0.48"
sea-orm = { version = "^0.8", features = [
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-actix-rustls",
    "macros",
], default-features = false } # XF MySQL compat
serde = "^1.0"
serde_json = "^1.0"
serde_php = "^0" # XF Compat
url = "^2"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
scraper = "0.18"  # HTML parsing for metadata extraction
uuid = { version = "^1.1", default-features = false, features = ["v4"] }
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.10"
actix-test = "0.1"
awc = "3.5"
serial_test = "3.0"  # Force integration tests to run serially (prevents DB conflicts)
tempfile = "3"  # For config file loading tests

[profile.debugo]
debug = true
inherits = "release"

[[bin]]
name = "dumpster"
path = "src/bin/forum/main.rs"

[[bin]]
name = "xf-chat"
path = "src/bin/xf_chat/main.rs"
